force-app/main/default/objects/Contact/fields/Additional_Phones_Emails__c.field-meta.xml
<CustomField>
    <fullName>Additional_Phones_Emails__c</fullName>
    <label>Additional Phones/Emails</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>