force-app/main/default/objects/Contact/fields/Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Affiliation__c</fullName>
    <label>UtFC Affiliation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
                <default>true</default>
                <label>Individual</label>
            </value>
            <value>
                <fullName>Community Contact</fullName>
            </value>
            <value>
                <fullName>Salt Lake City Council</fullName>
            </value>
            <value>
                <fullName>School contact</fullName>
            </value>
            <value>
                <fullName>U.S. Representative</fullName>
            </value>
            <value>
                <fullName>U.S. Senator</fullName>
            </value>
            <value>
                <fullName>UFC Board Member</fullName>
                <label>UtFC Board Member</label>
            </value>
            <value>
                <fullName>Former UtFC  Board Member</fullName>
            </value>
            <value>
                <fullName>Utah Legislature</fullName>
            </value>
            <value>
                <fullName>Industry Contact</fullName>
            </value>
            <value>
                <fullName>Artist</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Former Employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>