force-app/main/default/objects/Contact/fields/Allow_Duplicates__c.field-meta.xml
<CustomField>
    <fullName>Allow_Duplicates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hidden field used to get around Duplicate Errors in Process Builder and Flows</description>
    <inlineHelpText>Hidden field used to get around Duplicate Errors in Process Builder and Flows</inlineHelpText>
    <label>Allow Duplicates</label>
    <type>Checkbox</type>
</CustomField>