force-app/main/default/objects/Contact/fields/Cactus_ID__c.field-meta.xml
<CustomField>
    <fullName>Cactus_ID__c</fullName>
    <label>Cactus ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>