force-app/main/default/objects/Contact/fields/Contact_Label__c.field-meta.xml
<CustomField>
    <fullName>Contact_Label__c</fullName>
    <label>Contact Label(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>District Arts Coordinator</fullName>
            </value>
            <value>
                <fullName>Film Main Contact</fullName>
            </value>
            <value>
                <fullName>Film Team Member</fullName>
            </value>
            <value>
                <fullName>Instructor</fullName>
            </value>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Producer</fullName>
            </value>
            <value>
                <fullName>Publicist</fullName>
            </value>
            <value>
                <fullName>Teacher</fullName>
            </value>
            <value>
                <fullName>Teaching Artist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>