force-app/main/default/objects/Contact/fields/Contact_picture__c.field-meta.xml
<CustomField>
    <fullName>Contact_picture__c</fullName>
    <label>Contact picture</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>