force-app/main/default/objects/Contact/fields/Development_Contact_Do_Not__c.field-meta.xml
<CustomField>
    <fullName>Development_Contact_Do_Not__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this checkbox is checked, please contact the development team before emailing or calling. Please</inlineHelpText>
    <label>Development Contact/Dev to Approve Comm</label>
    <type>Checkbox</type>
</CustomField>