force-app/main/default/objects/Contact/fields/Dietary_Preference__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Preference__c</fullName>
    <inlineHelpText>This comes from event registration</inlineHelpText>
    <label>Dietary Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Omnivore</fullName>
            </value>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
            <value>
                <fullName>Vegan</fullName>
            </value>
            <value>
                <fullName>Gluten-Free</fullName>
            </value>
            <value>
                <fullName>No Preference</fullName>
            </value>
            <value>
                <fullName>I will contact you with my preference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>