force-app/main/default/objects/Contact/fields/DTH_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>DTH_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DTH Newsletter</label>
    <type>Checkbox</type>
</CustomField>