force-app/main/default/objects/Contact/fields/EDU_Dual_Immersion__c.field-meta.xml
<CustomField>
    <fullName>EDU_Dual_Immersion__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this teacher works at a Dual Immersion school</inlineHelpText>
    <label>Dual Immersion - DEPRECATED</label>
    <type>Checkbox</type>
</CustomField>