force-app/main/default/objects/Contact/fields/Education_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Education_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Education Newsletter</label>
    <type>Checkbox</type>
</CustomField>