force-app/main/default/objects/Contact/fields/Educational_Contact_Position__c.field-meta.xml
<CustomField>
    <fullName>Educational_Contact_Position__c</fullName>
    <label>Educational Contact Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Assistant Principal</fullName>
            </value>
            <value>
                <fullName>Counselor</fullName>
            </value>
            <value>
                <fullName>District</fullName>
            </value>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Teacher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>