force-app/main/default/objects/Contact/fields/Educational_Interests__c.field-meta.xml
<CustomField>
    <fullName>Educational_Interests__c</fullName>
    <label>Educational Interests?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Behind the Animation</fullName>
            </value>
            <value>
                <fullName>Film Spark</fullName>
            </value>
            <value>
                <fullName>Moving Stories</fullName>
            </value>
            <value>
                <fullName>Real to Reel</fullName>
            </value>
            <value>
                <fullName>SHIFT</fullName>
            </value>
            <value>
                <fullName>Through My Lens</fullName>
            </value>
            <value>
                <fullName>Tumbleweeds Festival Field Trips</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>