force-app/main/default/objects/Contact/fields/Email_Bounced_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Bounced_Date__c</fullName>
    <label>Email Bounced Date</label>
    <type>Date</type>
</CustomField>