force-app/main/default/objects/Contact/fields/Email_Bounced_Reason__c.field-meta.xml
<CustomField>
    <fullName>Email_Bounced_Reason__c</fullName>
    <label>Email Bounced Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>