force-app/main/default/objects/Contact/fields/Garden_Party_Email_Group__c.field-meta.xml
<CustomField>
    <fullName>Garden_Party_Email_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Events Invitation Group</label>
    <type>Checkbox</type>
</CustomField>