force-app/main/default/objects/Contact/fields/Grades_Taught__c.field-meta.xml
<CustomField>
    <fullName>Grades_Taught__c</fullName>
    <description>Grades taught.</description>
    <label>Grades Taught</label>
    <length>255</length>
    <type>Text</type>
</CustomField>