force-app/main/default/objects/Contact/fields/Greeting__c.field-meta.xml
<CustomField>
    <fullName>Greeting__c</fullName>
    <label>Greeting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>