force-app/main/default/objects/Contact/fields/Household_Membership_Level__c.field-meta.xml
<CustomField>
    <fullName>Household_Membership_Level__c</fullName>
    <formula>Account.Membership_Level__c</formula>
    <label>Household Membership Level</label>
    <type>Text</type>
</CustomField>