force-app/main/default/objects/Contact/fields/Household_Membership_Status__c.field-meta.xml
<CustomField>
    <fullName>Household_Membership_Status__c</fullName>
    <formula>Account.Membership_Status__c</formula>
    <label>Household Membership Status</label>
    <type>Text</type>
</CustomField>