force-app/main/default/objects/Contact/fields/Import_Notes__c.field-meta.xml
<CustomField>
    <fullName>Import_Notes__c</fullName>
    <label>Import Notes</label>
    <type>TextArea</type>
</CustomField>