force-app/main/default/objects/Contact/fields/Interests__c.field-meta.xml
<CustomField>
    <fullName>Interests__c</fullName>
    <label>Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Animals</fullName>
            </value>
            <value>
                <fullName>Architecture</fullName>
            </value>
            <value>
                <fullName>Art</fullName>
            </value>
            <value>
                <fullName>Bookclub</fullName>
            </value>
            <value>
                <fullName>Capital Campaign</fullName>
            </value>
            <value>
                <fullName>CATEGORIES: Sundance Press</fullName>
            </value>
            <value>
                <fullName>Dance</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>DTH email group</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Environment/Sustainability</fullName>
            </value>
            <value>
                <fullName>Film Studies</fullName>
            </value>
            <value>
                <fullName>Films Without Borders</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>French Film</fullName>
            </value>
            <value>
                <fullName>Garden Party</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Humanities</fullName>
            </value>
            <value>
                <fullName>Illuminate</fullName>
            </value>
            <value>
                <fullName>Jewish</fullName>
            </value>
            <value>
                <fullName>Jewish Culture</fullName>
            </value>
            <value>
                <fullName>Kamas</fullName>
            </value>
            <value>
                <fullName>LDS</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>LGBT</fullName>
            </value>
            <value>
                <fullName>Logan</fullName>
            </value>
            <value>
                <fullName>Moab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>