force-app/main/default/objects/Contact/fields/Languages_Taught_Admin__c.field-meta.xml
<CustomField>
    <fullName>Languages_Taught_Admin__c</fullName>
    <inlineHelpText>What language(s) does this teacher teach use in their class(es)</inlineHelpText>
    <label>Languages Taught/Admin</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chinese (Mandarin)</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Portuguese</fullName>
            </value>
            <value>
                <fullName>Russian</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>