force-app/main/default/objects/Contact/fields/Lifetime_Supporter__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Supporter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lifetime Supporter - Benefits for Life</description>
    <inlineHelpText>For ex-employees, great partners, longtime donors.</inlineHelpText>
    <label>Lifetime Supporter - Benefits for Life</label>
    <type>Checkbox</type>
</CustomField>