force-app/main/default/objects/Contact/fields/Local_Director__c.field-meta.xml
<CustomField>
    <fullName>Local_Director__c</fullName>
    <label>Local Director</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>