force-app/main/default/objects/Contact/fields/Minority_Director__c.field-meta.xml
<CustomField>
    <fullName>Minority_Director__c</fullName>
    <label>Minority Director</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Female-Identified</fullName>
            </value>
            <value>
                <fullName>LGBTQ</fullName>
            </value>
            <value>
                <fullName>BIPOC</fullName>
            </value>
            <value>
                <fullName>QPOC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>