force-app/main/default/objects/Contact/fields/NGOC_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>NGOC_SF_ID__c</fullName>
    <label>NGOC SF ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>