force-app/main/default/objects/Contact/fields/Outreach_Contact__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outreach Contact</label>
    <type>Checkbox</type>
</CustomField>