force-app/main/default/objects/Contact/fields/Outreach_Interests__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Interests__c</fullName>
    <label>Outreach Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>African-American</fullName>
            </value>
            <value>
                <fullName>Asian American</fullName>
            </value>
            <value>
                <fullName>Business/Economy</fullName>
            </value>
            <value>
                <fullName>Cinematography/Photography</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Environment/Sustainability</fullName>
            </value>
            <value>
                <fullName>Foreign Language</fullName>
            </value>
            <value>
                <fullName>Health &amp; Healthcare</fullName>
            </value>
            <value>
                <fullName>Humanities</fullName>
            </value>
            <value>
                <fullName>Human Rights/Social Justice</fullName>
            </value>
            <value>
                <fullName>Indigenous Peoples</fullName>
            </value>
            <value>
                <fullName>Jewish Culture</fullName>
            </value>
            <value>
                <fullName>Kids/Family Film</fullName>
            </value>
            <value>
                <fullName>Latina/Chicano</fullName>
            </value>
            <value>
                <fullName>Law/Justice</fullName>
            </value>
            <value>
                <fullName>LGBTQ</fullName>
            </value>
            <value>
                <fullName>Religion &amp; Faith</fullName>
            </value>
            <value>
                <fullName>Short Films</fullName>
            </value>
            <value>
                <fullName>Sports/Games</fullName>
            </value>
            <value>
                <fullName>STEAM</fullName>
            </value>
            <value>
                <fullName>Women/Girls</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>