force-app/main/default/objects/Contact/fields/Previous_giving_Level__c.field-meta.xml
<CustomField>
    <fullName>Previous_giving_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Giving Level</label>
    <referenceTo>npsp__Level__c</referenceTo>
    <relationshipLabel>Contacts (Level)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>