force-app/main/default/objects/Contact/fields/Previous_Volunteer_Experience__c.field-meta.xml
<CustomField>
    <fullName>Previous_Volunteer_Experience__c</fullName>
    <inlineHelpText>Please list any previous Volunteer Experience</inlineHelpText>
    <label>Previous Volunteer Experience</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>