force-app/main/default/objects/Contact/fields/PrimaryAffiliation_EducationNote__c.field-meta.xml
<CustomField>
    <fullName>PrimaryAffiliation_EducationNote__c</fullName>
    <formula>&quot;School District, School Name, School Type, POPS area, and Title 1 are all pulled from the Contact&apos;s Primary Affiliation&quot;</formula>
    <label>Education Information Note</label>
    <type>Text</type>
</CustomField>