force-app/main/default/objects/Contact/fields/PrimaryAffiliation_POPSArea__c.field-meta.xml
<CustomField>
    <fullName>PrimaryAffiliation_POPSArea__c</fullName>
    <description>POP Area pulled from the Primary Affiliation</description>
    <formula>TEXT(npsp__Primary_Affiliation__r.Pops_Area__c)</formula>
    <inlineHelpText>POP Area pulled from the Primary Affiliation</inlineHelpText>
    <label>POPS Area (from Primary Affiliation)</label>
    <type>Text</type>
</CustomField>