force-app/main/default/objects/Contact/fields/PrimaryAffiliation_School_District__c.field-meta.xml
<CustomField>
    <fullName>PrimaryAffiliation_School_District__c</fullName>
    <description>School District (from Primary Affiliation)</description>
    <formula>npsp__Primary_Affiliation__r.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>School District - pulls from Primary Affiliation account</inlineHelpText>
    <label>School Dist. (from Primary Affiliation)</label>
    <type>Text</type>
</CustomField>