force-app/main/default/objects/Contact/fields/PrimaryAffiliation_School_Name__c.field-meta.xml
<CustomField>
    <fullName>PrimaryAffiliation_School_Name__c</fullName>
    <description>Primary Affiliation (School or District if the employee is at the District level)</description>
    <formula>npsp__Primary_Affiliation__r.Name</formula>
    <inlineHelpText>Primary Affiliation (School or District if the employee is at the District level)</inlineHelpText>
    <label>School Name (from Primary Affiliation)</label>
    <type>Text</type>
</CustomField>