force-app/main/default/objects/Contact/fields/PrimaryAffiliation_SchoolType__c.field-meta.xml
<CustomField>
    <fullName>PrimaryAffiliation_SchoolType__c</fullName>
    <description>School Type pulled from the Primary Affiliation</description>
    <formula>TEXT(npsp__Primary_Affiliation__r.School_Type__c)</formula>
    <inlineHelpText>School Type pulled from the Primary Affiliation</inlineHelpText>
    <label>School Type</label>
    <type>Text</type>
</CustomField>