force-app/main/default/objects/Contact/fields/PrimaryAffiliation_Title1__c.field-meta.xml
<CustomField>
    <fullName>PrimaryAffiliation_Title1__c</fullName>
    <description>Title 1 checkbox (True or False) pulled from the Primary Affiliation Account</description>
    <formula>npsp__Primary_Affiliation__r.Title_I_School__c</formula>
    <inlineHelpText>Title 1 checkbox (True or False) pulled from the Primary Affiliation Account</inlineHelpText>
    <label>Title 1 (from Primary Affiliation)</label>
    <type>Checkbox</type>
</CustomField>