force-app/main/default/objects/Contact/fields/Receive_Film_Guide__c.field-meta.xml
<CustomField>
    <fullName>Receive_Film_Guide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receive Film Guide</label>
    <type>Checkbox</type>
</CustomField>