force-app/main/default/objects/Contact/fields/School_Contact__c.field-meta.xml
<CustomField>
    <fullName>School_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>School Contact</label>
    <type>Checkbox</type>
</CustomField>