force-app/main/default/objects/Contact/fields/School_year__c.field-meta.xml
<CustomField>
    <fullName>School_year__c</fullName>
    <inlineHelpText>School year during which this contact was met?</inlineHelpText>
    <label>School year:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2014-2015</fullName>
            </value>
            <value>
                <fullName>2015-2016</fullName>
            </value>
            <value>
                <fullName>2016-2017</fullName>
            </value>
            <value>
                <fullName>2017-2018</fullName>
            </value>
            <value>
                <fullName>2018-2019</fullName>
            </value>
            <value>
                <fullName>2019-2020</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>