force-app/main/default/objects/Contact/fields/Subject_s_taught__c.field-meta.xml
<CustomField>
    <fullName>Subject_s_taught__c</fullName>
    <description>What subjects does this teacher teach?</description>
    <inlineHelpText>What subjects does this teacher teach?</inlineHelpText>
    <label>Subject(s) taught</label>
    <type>TextArea</type>
</CustomField>