force-app/main/default/objects/Contact/fields/Title_1__c.field-meta.xml
<CustomField>
    <fullName>Title_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Title 1?</label>
    <type>Checkbox</type>
</CustomField>